--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: metrics.classic.svg
-          committer_token: ${{ secrets.token }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
           token: ${{ secrets.token }}
           base: header, repositories
           plugin_lines: yes
@@ -20,16 +20,16 @@ jobs:
     needs: [metrics]
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.token }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Setup Information
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config --global user.name "GitHub Actions" 
+          git config --global user.email "actions@github.com"
       - name: Checkout
         uses: actions/checkout@v3.6.0
         with:
-          token: ${{ secrets.token }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Update SNK
         uses: Platane/snk@v3
         with:
